--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Note It</string>
+    <string name="app_tag_line">Don\'t Remember, Just Note It</string>
+    <string name="note_it">NoteIt</string>
 </resources>
